patito/compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON global_scope checkVars cicloFuncs MAIN body END
Rule 2     global_scope -> <empty>
Rule 3     checkVars -> vars
Rule 4     checkVars -> empty
Rule 5     cicloFuncs -> funcs cicloFuncs
Rule 6     cicloFuncs -> funcs
Rule 7     cicloFuncs -> empty
Rule 8     vars -> VAR nombresVars
Rule 9     nombresVars -> nombresVars declVar
Rule 10    nombresVars -> declVar
Rule 11    declVar -> idsVars COLON type SEMICOLON
Rule 12    idsVars -> idsVars COMMA ID
Rule 13    idsVars -> ID
Rule 14    funcs -> VOID ID LPARENTH groupParams add_function RPARENTH LSQUAREB new_scope checkVars body RSQUAREB SEMICOLON
Rule 15    add_function -> <empty>
Rule 16    new_scope -> <empty>
Rule 17    groupParams -> groupParams COMMA idsParams
Rule 18    groupParams -> idsParams
Rule 19    groupParams -> empty
Rule 20    idsParams -> ID COLON type
Rule 21    type -> INT new_type
Rule 22    type -> FLOAT new_type
Rule 23    new_type -> <empty>
Rule 24    body -> LCURLYB bodyStatements RCURLYB
Rule 25    bodyStatements -> bodyStatements statement
Rule 26    bodyStatements -> statement
Rule 27    bodyStatements -> empty
Rule 28    statement -> assign
Rule 29    statement -> condition
Rule 30    statement -> cycle
Rule 31    statement -> fCall
Rule 32    statement -> print
Rule 33    assign -> ID EQUALS expresion SEMICOLON
Rule 34    condition -> IF LPARENTH expresion RPARENTH evaluate_condition body conditionElse end_condition SEMICOLON
Rule 35    end_condition -> <empty>
Rule 36    evaluate_condition -> <empty>
Rule 37    conditionElse -> ELSE evaluate_else body
Rule 38    conditionElse -> empty
Rule 39    evaluate_else -> <empty>
Rule 40    cycle -> DO startof_cycle body WHILE expresion check_expression SEMICOLON
Rule 41    startof_cycle -> <empty>
Rule 42    check_expression -> <empty>
Rule 43    fCall -> ID LPARENTH expresionFCall RPARENTH SEMICOLON
Rule 44    expresionFCall -> expresionFCall COMMA expresion
Rule 45    expresionFCall -> expresion
Rule 46    expresionFCall -> empty
Rule 47    print -> PRINT LPARENTH printExpresion RPARENTH print_new_line SEMICOLON
Rule 48    print_new_line -> <empty>
Rule 49    printExpresion -> printExpresion COMMA expresOrString
Rule 50    printExpresion -> expresOrString
Rule 51    expresOrString -> expresion
Rule 52    expresOrString -> STRINGVALUE
Rule 53    exp -> termino solve_exp cicloExp
Rule 54    solve_exp -> <empty>
Rule 55    cicloExp -> operadoresExp exp
Rule 56    cicloExp -> empty
Rule 57    operadoresExp -> PLUS
Rule 58    operadoresExp -> MINUS
Rule 59    expresion -> exp comparacion solve_comparacion
Rule 60    solve_comparacion -> <empty>
Rule 61    comparacion -> operadoresComp exp
Rule 62    comparacion -> empty
Rule 63    operadoresComp -> GT
Rule 64    operadoresComp -> LT
Rule 65    operadoresComp -> NE
Rule 66    termino -> factor solve_term cicloTerm
Rule 67    solve_term -> <empty>
Rule 68    cicloTerm -> operadoresTerm termino
Rule 69    cicloTerm -> empty
Rule 70    operadoresTerm -> TIMES
Rule 71    operadoresTerm -> DIVIDE
Rule 72    factor -> factorExp
Rule 73    factor -> factorIdCte
Rule 74    factorExp -> LPARENTH expresion RPARENTH
Rule 75    factorIdCte -> factorOperadores idOrCte
Rule 76    factorOperadores -> operadoresExp
Rule 77    factorOperadores -> empty
Rule 78    idOrCte -> ID
Rule 79    idOrCte -> cte
Rule 80    cte -> INTVALUE
Rule 81    cte -> FLOATVALUE
Rule 82    empty -> <empty>

Terminals, with rules where they appear

COLON                : 11 20
COMMA                : 12 17 44 49
DIVIDE               : 71
DO                   : 40
ELSE                 : 37
END                  : 1
EQUALS               : 33
FLOAT                : 22
FLOATVALUE           : 81
GT                   : 63
ID                   : 1 12 13 14 20 33 43 78
IF                   : 34
INT                  : 21
INTVALUE             : 80
LCURLYB              : 24
LPARENTH             : 14 34 43 47 74
LSQUAREB             : 14
LT                   : 64
MAIN                 : 1
MINUS                : 58
NE                   : 65
NEWLINE              : 
PLUS                 : 57
PRINT                : 47
PROGRAM              : 1
RCURLYB              : 24
RPARENTH             : 14 34 43 47 74
RSQUAREB             : 14
SEMICOLON            : 1 11 14 33 34 40 43 47
STRINGVALUE          : 52
TIMES                : 70
VAR                  : 8
VOID                 : 14
WHILE                : 40
error                : 

Nonterminals, with rules where they appear

add_function         : 14
assign               : 28
body                 : 1 14 34 37 40
bodyStatements       : 24 25
checkVars            : 1 14
check_expression     : 40
cicloExp             : 53
cicloFuncs           : 1 5
cicloTerm            : 66
comparacion          : 59
condition            : 29
conditionElse        : 34
cte                  : 79
cycle                : 30
declVar              : 9 10
empty                : 4 7 19 27 38 46 56 62 69 77
end_condition        : 34
evaluate_condition   : 34
evaluate_else        : 37
exp                  : 55 59 61
expresOrString       : 49 50
expresion            : 33 34 40 44 45 51 74
expresionFCall       : 43 44
fCall                : 31
factor               : 66
factorExp            : 72
factorIdCte          : 73
factorOperadores     : 75
funcs                : 5 6
global_scope         : 1
groupParams          : 14 17
idOrCte              : 75
idsParams            : 17 18
idsVars              : 11 12
new_scope            : 14
new_type             : 21 22
nombresVars          : 8 9
operadoresComp       : 61
operadoresExp        : 55 76
operadoresTerm       : 68
print                : 32
printExpresion       : 47 49
print_new_line       : 47
program              : 0
solve_comparacion    : 59
solve_exp            : 53
solve_term           : 66
startof_cycle        : 40
statement            : 25 26
termino              : 53 68
type                 : 11 20
vars                 : 3

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON global_scope checkVars cicloFuncs MAIN body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON global_scope checkVars cicloFuncs MAIN body END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON global_scope checkVars cicloFuncs MAIN body END

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . global_scope checkVars cicloFuncs MAIN body END
    (2) global_scope -> .

    VAR             reduce using rule 2 (global_scope -> .)
    VOID            reduce using rule 2 (global_scope -> .)
    MAIN            reduce using rule 2 (global_scope -> .)

    global_scope                   shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON global_scope . checkVars cicloFuncs MAIN body END
    (3) checkVars -> . vars
    (4) checkVars -> . empty
    (8) vars -> . VAR nombresVars
    (82) empty -> .

    VAR             shift and go to state 9
    VOID            reduce using rule 82 (empty -> .)
    MAIN            reduce using rule 82 (empty -> .)

    checkVars                      shift and go to state 6
    vars                           shift and go to state 7
    empty                          shift and go to state 8

state 6

    (1) program -> PROGRAM ID SEMICOLON global_scope checkVars . cicloFuncs MAIN body END
    (5) cicloFuncs -> . funcs cicloFuncs
    (6) cicloFuncs -> . funcs
    (7) cicloFuncs -> . empty
    (14) funcs -> . VOID ID LPARENTH groupParams add_function RPARENTH LSQUAREB new_scope checkVars body RSQUAREB SEMICOLON
    (82) empty -> .

    VOID            shift and go to state 13
    MAIN            reduce using rule 82 (empty -> .)

    cicloFuncs                     shift and go to state 10
    funcs                          shift and go to state 11
    empty                          shift and go to state 12

state 7

    (3) checkVars -> vars .

    VOID            reduce using rule 3 (checkVars -> vars .)
    MAIN            reduce using rule 3 (checkVars -> vars .)
    LCURLYB         reduce using rule 3 (checkVars -> vars .)


state 8

    (4) checkVars -> empty .

    VOID            reduce using rule 4 (checkVars -> empty .)
    MAIN            reduce using rule 4 (checkVars -> empty .)
    LCURLYB         reduce using rule 4 (checkVars -> empty .)


state 9

    (8) vars -> VAR . nombresVars
    (9) nombresVars -> . nombresVars declVar
    (10) nombresVars -> . declVar
    (11) declVar -> . idsVars COLON type SEMICOLON
    (12) idsVars -> . idsVars COMMA ID
    (13) idsVars -> . ID

    ID              shift and go to state 17

    nombresVars                    shift and go to state 14
    declVar                        shift and go to state 15
    idsVars                        shift and go to state 16

state 10

    (1) program -> PROGRAM ID SEMICOLON global_scope checkVars cicloFuncs . MAIN body END

    MAIN            shift and go to state 18


state 11

    (5) cicloFuncs -> funcs . cicloFuncs
    (6) cicloFuncs -> funcs .
    (5) cicloFuncs -> . funcs cicloFuncs
    (6) cicloFuncs -> . funcs
    (7) cicloFuncs -> . empty
    (14) funcs -> . VOID ID LPARENTH groupParams add_function RPARENTH LSQUAREB new_scope checkVars body RSQUAREB SEMICOLON
    (82) empty -> .

  ! reduce/reduce conflict for MAIN resolved using rule 6 (cicloFuncs -> funcs .)
    MAIN            reduce using rule 6 (cicloFuncs -> funcs .)
    VOID            shift and go to state 13

  ! MAIN            [ reduce using rule 82 (empty -> .) ]

    funcs                          shift and go to state 11
    cicloFuncs                     shift and go to state 19
    empty                          shift and go to state 12

state 12

    (7) cicloFuncs -> empty .

    MAIN            reduce using rule 7 (cicloFuncs -> empty .)


state 13

    (14) funcs -> VOID . ID LPARENTH groupParams add_function RPARENTH LSQUAREB new_scope checkVars body RSQUAREB SEMICOLON

    ID              shift and go to state 20


state 14

    (8) vars -> VAR nombresVars .
    (9) nombresVars -> nombresVars . declVar
    (11) declVar -> . idsVars COLON type SEMICOLON
    (12) idsVars -> . idsVars COMMA ID
    (13) idsVars -> . ID

    VOID            reduce using rule 8 (vars -> VAR nombresVars .)
    MAIN            reduce using rule 8 (vars -> VAR nombresVars .)
    LCURLYB         reduce using rule 8 (vars -> VAR nombresVars .)
    ID              shift and go to state 17

    declVar                        shift and go to state 21
    idsVars                        shift and go to state 16

state 15

    (10) nombresVars -> declVar .

    ID              reduce using rule 10 (nombresVars -> declVar .)
    VOID            reduce using rule 10 (nombresVars -> declVar .)
    MAIN            reduce using rule 10 (nombresVars -> declVar .)
    LCURLYB         reduce using rule 10 (nombresVars -> declVar .)


state 16

    (11) declVar -> idsVars . COLON type SEMICOLON
    (12) idsVars -> idsVars . COMMA ID

    COLON           shift and go to state 22
    COMMA           shift and go to state 23


state 17

    (13) idsVars -> ID .

    COLON           reduce using rule 13 (idsVars -> ID .)
    COMMA           reduce using rule 13 (idsVars -> ID .)


state 18

    (1) program -> PROGRAM ID SEMICOLON global_scope checkVars cicloFuncs MAIN . body END
    (24) body -> . LCURLYB bodyStatements RCURLYB

    LCURLYB         shift and go to state 25

    body                           shift and go to state 24

state 19

    (5) cicloFuncs -> funcs cicloFuncs .

    MAIN            reduce using rule 5 (cicloFuncs -> funcs cicloFuncs .)


state 20

    (14) funcs -> VOID ID . LPARENTH groupParams add_function RPARENTH LSQUAREB new_scope checkVars body RSQUAREB SEMICOLON

    LPARENTH        shift and go to state 26


state 21

    (9) nombresVars -> nombresVars declVar .

    ID              reduce using rule 9 (nombresVars -> nombresVars declVar .)
    VOID            reduce using rule 9 (nombresVars -> nombresVars declVar .)
    MAIN            reduce using rule 9 (nombresVars -> nombresVars declVar .)
    LCURLYB         reduce using rule 9 (nombresVars -> nombresVars declVar .)


state 22

    (11) declVar -> idsVars COLON . type SEMICOLON
    (21) type -> . INT new_type
    (22) type -> . FLOAT new_type

    INT             shift and go to state 28
    FLOAT           shift and go to state 29

    type                           shift and go to state 27

state 23

    (12) idsVars -> idsVars COMMA . ID

    ID              shift and go to state 30


state 24

    (1) program -> PROGRAM ID SEMICOLON global_scope checkVars cicloFuncs MAIN body . END

    END             shift and go to state 31


state 25

    (24) body -> LCURLYB . bodyStatements RCURLYB
    (25) bodyStatements -> . bodyStatements statement
    (26) bodyStatements -> . statement
    (27) bodyStatements -> . empty
    (28) statement -> . assign
    (29) statement -> . condition
    (30) statement -> . cycle
    (31) statement -> . fCall
    (32) statement -> . print
    (82) empty -> .
    (33) assign -> . ID EQUALS expresion SEMICOLON
    (34) condition -> . IF LPARENTH expresion RPARENTH evaluate_condition body conditionElse end_condition SEMICOLON
    (40) cycle -> . DO startof_cycle body WHILE expresion check_expression SEMICOLON
    (43) fCall -> . ID LPARENTH expresionFCall RPARENTH SEMICOLON
    (47) print -> . PRINT LPARENTH printExpresion RPARENTH print_new_line SEMICOLON

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    RCURLYB         reduce using rule 82 (empty -> .)
    ID              shift and go to state 40
    IF              shift and go to state 41
    DO              shift and go to state 42
    PRINT           shift and go to state 43

  ! ID              [ reduce using rule 82 (empty -> .) ]
  ! IF              [ reduce using rule 82 (empty -> .) ]
  ! DO              [ reduce using rule 82 (empty -> .) ]
  ! PRINT           [ reduce using rule 82 (empty -> .) ]

    bodyStatements                 shift and go to state 32
    statement                      shift and go to state 33
    empty                          shift and go to state 34
    assign                         shift and go to state 35
    condition                      shift and go to state 36
    cycle                          shift and go to state 37
    fCall                          shift and go to state 38
    print                          shift and go to state 39

state 26

    (14) funcs -> VOID ID LPARENTH . groupParams add_function RPARENTH LSQUAREB new_scope checkVars body RSQUAREB SEMICOLON
    (17) groupParams -> . groupParams COMMA idsParams
    (18) groupParams -> . idsParams
    (19) groupParams -> . empty
    (20) idsParams -> . ID COLON type
    (82) empty -> .

    ID              shift and go to state 44
    COMMA           reduce using rule 82 (empty -> .)
    RPARENTH        reduce using rule 82 (empty -> .)

    groupParams                    shift and go to state 45
    idsParams                      shift and go to state 46
    empty                          shift and go to state 47

state 27

    (11) declVar -> idsVars COLON type . SEMICOLON

    SEMICOLON       shift and go to state 48


state 28

    (21) type -> INT . new_type
    (23) new_type -> .

    SEMICOLON       reduce using rule 23 (new_type -> .)
    COMMA           reduce using rule 23 (new_type -> .)
    RPARENTH        reduce using rule 23 (new_type -> .)

    new_type                       shift and go to state 49

state 29

    (22) type -> FLOAT . new_type
    (23) new_type -> .

    SEMICOLON       reduce using rule 23 (new_type -> .)
    COMMA           reduce using rule 23 (new_type -> .)
    RPARENTH        reduce using rule 23 (new_type -> .)

    new_type                       shift and go to state 50

state 30

    (12) idsVars -> idsVars COMMA ID .

    COLON           reduce using rule 12 (idsVars -> idsVars COMMA ID .)
    COMMA           reduce using rule 12 (idsVars -> idsVars COMMA ID .)


state 31

    (1) program -> PROGRAM ID SEMICOLON global_scope checkVars cicloFuncs MAIN body END .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON global_scope checkVars cicloFuncs MAIN body END .)


state 32

    (24) body -> LCURLYB bodyStatements . RCURLYB
    (25) bodyStatements -> bodyStatements . statement
    (28) statement -> . assign
    (29) statement -> . condition
    (30) statement -> . cycle
    (31) statement -> . fCall
    (32) statement -> . print
    (33) assign -> . ID EQUALS expresion SEMICOLON
    (34) condition -> . IF LPARENTH expresion RPARENTH evaluate_condition body conditionElse end_condition SEMICOLON
    (40) cycle -> . DO startof_cycle body WHILE expresion check_expression SEMICOLON
    (43) fCall -> . ID LPARENTH expresionFCall RPARENTH SEMICOLON
    (47) print -> . PRINT LPARENTH printExpresion RPARENTH print_new_line SEMICOLON

    RCURLYB         shift and go to state 51
    ID              shift and go to state 40
    IF              shift and go to state 41
    DO              shift and go to state 42
    PRINT           shift and go to state 43

    statement                      shift and go to state 52
    assign                         shift and go to state 35
    condition                      shift and go to state 36
    cycle                          shift and go to state 37
    fCall                          shift and go to state 38
    print                          shift and go to state 39

state 33

    (26) bodyStatements -> statement .

    RCURLYB         reduce using rule 26 (bodyStatements -> statement .)
    ID              reduce using rule 26 (bodyStatements -> statement .)
    IF              reduce using rule 26 (bodyStatements -> statement .)
    DO              reduce using rule 26 (bodyStatements -> statement .)
    PRINT           reduce using rule 26 (bodyStatements -> statement .)


state 34

    (27) bodyStatements -> empty .

    RCURLYB         reduce using rule 27 (bodyStatements -> empty .)
    ID              reduce using rule 27 (bodyStatements -> empty .)
    IF              reduce using rule 27 (bodyStatements -> empty .)
    DO              reduce using rule 27 (bodyStatements -> empty .)
    PRINT           reduce using rule 27 (bodyStatements -> empty .)


state 35

    (28) statement -> assign .

    RCURLYB         reduce using rule 28 (statement -> assign .)
    ID              reduce using rule 28 (statement -> assign .)
    IF              reduce using rule 28 (statement -> assign .)
    DO              reduce using rule 28 (statement -> assign .)
    PRINT           reduce using rule 28 (statement -> assign .)


state 36

    (29) statement -> condition .

    RCURLYB         reduce using rule 29 (statement -> condition .)
    ID              reduce using rule 29 (statement -> condition .)
    IF              reduce using rule 29 (statement -> condition .)
    DO              reduce using rule 29 (statement -> condition .)
    PRINT           reduce using rule 29 (statement -> condition .)


state 37

    (30) statement -> cycle .

    RCURLYB         reduce using rule 30 (statement -> cycle .)
    ID              reduce using rule 30 (statement -> cycle .)
    IF              reduce using rule 30 (statement -> cycle .)
    DO              reduce using rule 30 (statement -> cycle .)
    PRINT           reduce using rule 30 (statement -> cycle .)


state 38

    (31) statement -> fCall .

    RCURLYB         reduce using rule 31 (statement -> fCall .)
    ID              reduce using rule 31 (statement -> fCall .)
    IF              reduce using rule 31 (statement -> fCall .)
    DO              reduce using rule 31 (statement -> fCall .)
    PRINT           reduce using rule 31 (statement -> fCall .)


state 39

    (32) statement -> print .

    RCURLYB         reduce using rule 32 (statement -> print .)
    ID              reduce using rule 32 (statement -> print .)
    IF              reduce using rule 32 (statement -> print .)
    DO              reduce using rule 32 (statement -> print .)
    PRINT           reduce using rule 32 (statement -> print .)


state 40

    (33) assign -> ID . EQUALS expresion SEMICOLON
    (43) fCall -> ID . LPARENTH expresionFCall RPARENTH SEMICOLON

    EQUALS          shift and go to state 53
    LPARENTH        shift and go to state 54


state 41

    (34) condition -> IF . LPARENTH expresion RPARENTH evaluate_condition body conditionElse end_condition SEMICOLON

    LPARENTH        shift and go to state 55


state 42

    (40) cycle -> DO . startof_cycle body WHILE expresion check_expression SEMICOLON
    (41) startof_cycle -> .

    LCURLYB         reduce using rule 41 (startof_cycle -> .)

    startof_cycle                  shift and go to state 56

state 43

    (47) print -> PRINT . LPARENTH printExpresion RPARENTH print_new_line SEMICOLON

    LPARENTH        shift and go to state 57


state 44

    (20) idsParams -> ID . COLON type

    COLON           shift and go to state 58


state 45

    (14) funcs -> VOID ID LPARENTH groupParams . add_function RPARENTH LSQUAREB new_scope checkVars body RSQUAREB SEMICOLON
    (17) groupParams -> groupParams . COMMA idsParams
    (15) add_function -> .

    COMMA           shift and go to state 60
    RPARENTH        reduce using rule 15 (add_function -> .)

    add_function                   shift and go to state 59

state 46

    (18) groupParams -> idsParams .

    COMMA           reduce using rule 18 (groupParams -> idsParams .)
    RPARENTH        reduce using rule 18 (groupParams -> idsParams .)


state 47

    (19) groupParams -> empty .

    COMMA           reduce using rule 19 (groupParams -> empty .)
    RPARENTH        reduce using rule 19 (groupParams -> empty .)


state 48

    (11) declVar -> idsVars COLON type SEMICOLON .

    ID              reduce using rule 11 (declVar -> idsVars COLON type SEMICOLON .)
    VOID            reduce using rule 11 (declVar -> idsVars COLON type SEMICOLON .)
    MAIN            reduce using rule 11 (declVar -> idsVars COLON type SEMICOLON .)
    LCURLYB         reduce using rule 11 (declVar -> idsVars COLON type SEMICOLON .)


state 49

    (21) type -> INT new_type .

    SEMICOLON       reduce using rule 21 (type -> INT new_type .)
    COMMA           reduce using rule 21 (type -> INT new_type .)
    RPARENTH        reduce using rule 21 (type -> INT new_type .)


state 50

    (22) type -> FLOAT new_type .

    SEMICOLON       reduce using rule 22 (type -> FLOAT new_type .)
    COMMA           reduce using rule 22 (type -> FLOAT new_type .)
    RPARENTH        reduce using rule 22 (type -> FLOAT new_type .)


state 51

    (24) body -> LCURLYB bodyStatements RCURLYB .

    END             reduce using rule 24 (body -> LCURLYB bodyStatements RCURLYB .)
    WHILE           reduce using rule 24 (body -> LCURLYB bodyStatements RCURLYB .)
    ELSE            reduce using rule 24 (body -> LCURLYB bodyStatements RCURLYB .)
    SEMICOLON       reduce using rule 24 (body -> LCURLYB bodyStatements RCURLYB .)
    RSQUAREB        reduce using rule 24 (body -> LCURLYB bodyStatements RCURLYB .)


state 52

    (25) bodyStatements -> bodyStatements statement .

    RCURLYB         reduce using rule 25 (bodyStatements -> bodyStatements statement .)
    ID              reduce using rule 25 (bodyStatements -> bodyStatements statement .)
    IF              reduce using rule 25 (bodyStatements -> bodyStatements statement .)
    DO              reduce using rule 25 (bodyStatements -> bodyStatements statement .)
    PRINT           reduce using rule 25 (bodyStatements -> bodyStatements statement .)


state 53

    (33) assign -> ID EQUALS . expresion SEMICOLON
    (59) expresion -> . exp comparacion solve_comparacion
    (53) exp -> . termino solve_exp cicloExp
    (66) termino -> . factor solve_term cicloTerm
    (72) factor -> . factorExp
    (73) factor -> . factorIdCte
    (74) factorExp -> . LPARENTH expresion RPARENTH
    (75) factorIdCte -> . factorOperadores idOrCte
    (76) factorOperadores -> . operadoresExp
    (77) factorOperadores -> . empty
    (57) operadoresExp -> . PLUS
    (58) operadoresExp -> . MINUS
    (82) empty -> .

    LPARENTH        shift and go to state 67
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    ID              reduce using rule 82 (empty -> .)
    INTVALUE        reduce using rule 82 (empty -> .)
    FLOATVALUE      reduce using rule 82 (empty -> .)

    expresion                      shift and go to state 61
    exp                            shift and go to state 62
    termino                        shift and go to state 63
    factor                         shift and go to state 64
    factorExp                      shift and go to state 65
    factorIdCte                    shift and go to state 66
    factorOperadores               shift and go to state 68
    operadoresExp                  shift and go to state 69
    empty                          shift and go to state 70

state 54

    (43) fCall -> ID LPARENTH . expresionFCall RPARENTH SEMICOLON
    (44) expresionFCall -> . expresionFCall COMMA expresion
    (45) expresionFCall -> . expresion
    (46) expresionFCall -> . empty
    (59) expresion -> . exp comparacion solve_comparacion
    (82) empty -> .
    (53) exp -> . termino solve_exp cicloExp
    (66) termino -> . factor solve_term cicloTerm
    (72) factor -> . factorExp
    (73) factor -> . factorIdCte
    (74) factorExp -> . LPARENTH expresion RPARENTH
    (75) factorIdCte -> . factorOperadores idOrCte
    (76) factorOperadores -> . operadoresExp
    (77) factorOperadores -> . empty
    (57) operadoresExp -> . PLUS
    (58) operadoresExp -> . MINUS

    RPARENTH        reduce using rule 82 (empty -> .)
    COMMA           reduce using rule 82 (empty -> .)
    ID              reduce using rule 82 (empty -> .)
    INTVALUE        reduce using rule 82 (empty -> .)
    FLOATVALUE      reduce using rule 82 (empty -> .)
    LPARENTH        shift and go to state 67
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72

    expresionFCall                 shift and go to state 73
    expresion                      shift and go to state 74
    empty                          shift and go to state 75
    exp                            shift and go to state 62
    termino                        shift and go to state 63
    factor                         shift and go to state 64
    factorExp                      shift and go to state 65
    factorIdCte                    shift and go to state 66
    factorOperadores               shift and go to state 68
    operadoresExp                  shift and go to state 69

state 55

    (34) condition -> IF LPARENTH . expresion RPARENTH evaluate_condition body conditionElse end_condition SEMICOLON
    (59) expresion -> . exp comparacion solve_comparacion
    (53) exp -> . termino solve_exp cicloExp
    (66) termino -> . factor solve_term cicloTerm
    (72) factor -> . factorExp
    (73) factor -> . factorIdCte
    (74) factorExp -> . LPARENTH expresion RPARENTH
    (75) factorIdCte -> . factorOperadores idOrCte
    (76) factorOperadores -> . operadoresExp
    (77) factorOperadores -> . empty
    (57) operadoresExp -> . PLUS
    (58) operadoresExp -> . MINUS
    (82) empty -> .

    LPARENTH        shift and go to state 67
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    ID              reduce using rule 82 (empty -> .)
    INTVALUE        reduce using rule 82 (empty -> .)
    FLOATVALUE      reduce using rule 82 (empty -> .)

    expresion                      shift and go to state 76
    exp                            shift and go to state 62
    termino                        shift and go to state 63
    factor                         shift and go to state 64
    factorExp                      shift and go to state 65
    factorIdCte                    shift and go to state 66
    factorOperadores               shift and go to state 68
    operadoresExp                  shift and go to state 69
    empty                          shift and go to state 70

state 56

    (40) cycle -> DO startof_cycle . body WHILE expresion check_expression SEMICOLON
    (24) body -> . LCURLYB bodyStatements RCURLYB

    LCURLYB         shift and go to state 25

    body                           shift and go to state 77

state 57

    (47) print -> PRINT LPARENTH . printExpresion RPARENTH print_new_line SEMICOLON
    (49) printExpresion -> . printExpresion COMMA expresOrString
    (50) printExpresion -> . expresOrString
    (51) expresOrString -> . expresion
    (52) expresOrString -> . STRINGVALUE
    (59) expresion -> . exp comparacion solve_comparacion
    (53) exp -> . termino solve_exp cicloExp
    (66) termino -> . factor solve_term cicloTerm
    (72) factor -> . factorExp
    (73) factor -> . factorIdCte
    (74) factorExp -> . LPARENTH expresion RPARENTH
    (75) factorIdCte -> . factorOperadores idOrCte
    (76) factorOperadores -> . operadoresExp
    (77) factorOperadores -> . empty
    (57) operadoresExp -> . PLUS
    (58) operadoresExp -> . MINUS
    (82) empty -> .

    STRINGVALUE     shift and go to state 81
    LPARENTH        shift and go to state 67
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    ID              reduce using rule 82 (empty -> .)
    INTVALUE        reduce using rule 82 (empty -> .)
    FLOATVALUE      reduce using rule 82 (empty -> .)

    printExpresion                 shift and go to state 78
    expresOrString                 shift and go to state 79
    expresion                      shift and go to state 80
    exp                            shift and go to state 62
    termino                        shift and go to state 63
    factor                         shift and go to state 64
    factorExp                      shift and go to state 65
    factorIdCte                    shift and go to state 66
    factorOperadores               shift and go to state 68
    operadoresExp                  shift and go to state 69
    empty                          shift and go to state 70

state 58

    (20) idsParams -> ID COLON . type
    (21) type -> . INT new_type
    (22) type -> . FLOAT new_type

    INT             shift and go to state 28
    FLOAT           shift and go to state 29

    type                           shift and go to state 82

state 59

    (14) funcs -> VOID ID LPARENTH groupParams add_function . RPARENTH LSQUAREB new_scope checkVars body RSQUAREB SEMICOLON

    RPARENTH        shift and go to state 83


state 60

    (17) groupParams -> groupParams COMMA . idsParams
    (20) idsParams -> . ID COLON type

    ID              shift and go to state 44

    idsParams                      shift and go to state 84

state 61

    (33) assign -> ID EQUALS expresion . SEMICOLON

    SEMICOLON       shift and go to state 85


state 62

    (59) expresion -> exp . comparacion solve_comparacion
    (61) comparacion -> . operadoresComp exp
    (62) comparacion -> . empty
    (63) operadoresComp -> . GT
    (64) operadoresComp -> . LT
    (65) operadoresComp -> . NE
    (82) empty -> .

    GT              shift and go to state 89
    LT              shift and go to state 90
    NE              shift and go to state 91
    SEMICOLON       reduce using rule 82 (empty -> .)
    RPARENTH        reduce using rule 82 (empty -> .)
    COMMA           reduce using rule 82 (empty -> .)

    comparacion                    shift and go to state 86
    operadoresComp                 shift and go to state 87
    empty                          shift and go to state 88

state 63

    (53) exp -> termino . solve_exp cicloExp
    (54) solve_exp -> .

    PLUS            reduce using rule 54 (solve_exp -> .)
    MINUS           reduce using rule 54 (solve_exp -> .)
    GT              reduce using rule 54 (solve_exp -> .)
    LT              reduce using rule 54 (solve_exp -> .)
    NE              reduce using rule 54 (solve_exp -> .)
    SEMICOLON       reduce using rule 54 (solve_exp -> .)
    RPARENTH        reduce using rule 54 (solve_exp -> .)
    COMMA           reduce using rule 54 (solve_exp -> .)

    solve_exp                      shift and go to state 92

state 64

    (66) termino -> factor . solve_term cicloTerm
    (67) solve_term -> .

    TIMES           reduce using rule 67 (solve_term -> .)
    DIVIDE          reduce using rule 67 (solve_term -> .)
    PLUS            reduce using rule 67 (solve_term -> .)
    MINUS           reduce using rule 67 (solve_term -> .)
    GT              reduce using rule 67 (solve_term -> .)
    LT              reduce using rule 67 (solve_term -> .)
    NE              reduce using rule 67 (solve_term -> .)
    SEMICOLON       reduce using rule 67 (solve_term -> .)
    RPARENTH        reduce using rule 67 (solve_term -> .)
    COMMA           reduce using rule 67 (solve_term -> .)

    solve_term                     shift and go to state 93

state 65

    (72) factor -> factorExp .

    TIMES           reduce using rule 72 (factor -> factorExp .)
    DIVIDE          reduce using rule 72 (factor -> factorExp .)
    PLUS            reduce using rule 72 (factor -> factorExp .)
    MINUS           reduce using rule 72 (factor -> factorExp .)
    GT              reduce using rule 72 (factor -> factorExp .)
    LT              reduce using rule 72 (factor -> factorExp .)
    NE              reduce using rule 72 (factor -> factorExp .)
    SEMICOLON       reduce using rule 72 (factor -> factorExp .)
    RPARENTH        reduce using rule 72 (factor -> factorExp .)
    COMMA           reduce using rule 72 (factor -> factorExp .)


state 66

    (73) factor -> factorIdCte .

    TIMES           reduce using rule 73 (factor -> factorIdCte .)
    DIVIDE          reduce using rule 73 (factor -> factorIdCte .)
    PLUS            reduce using rule 73 (factor -> factorIdCte .)
    MINUS           reduce using rule 73 (factor -> factorIdCte .)
    GT              reduce using rule 73 (factor -> factorIdCte .)
    LT              reduce using rule 73 (factor -> factorIdCte .)
    NE              reduce using rule 73 (factor -> factorIdCte .)
    SEMICOLON       reduce using rule 73 (factor -> factorIdCte .)
    RPARENTH        reduce using rule 73 (factor -> factorIdCte .)
    COMMA           reduce using rule 73 (factor -> factorIdCte .)


state 67

    (74) factorExp -> LPARENTH . expresion RPARENTH
    (59) expresion -> . exp comparacion solve_comparacion
    (53) exp -> . termino solve_exp cicloExp
    (66) termino -> . factor solve_term cicloTerm
    (72) factor -> . factorExp
    (73) factor -> . factorIdCte
    (74) factorExp -> . LPARENTH expresion RPARENTH
    (75) factorIdCte -> . factorOperadores idOrCte
